--- a/src/styles/RecipeList.css
+++ b/src/styles/RecipeList.css
@@ -43,6 +43,13 @@
   /* background-color: lightgrey; */
 }
 
+.card:hover {
+  -webkit-box-shadow: 1px 0px 7px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 1px 0px 7px rgba(0, 0, 0, 0.5);
+  /* box-shadow: 2px 4px 7px -2px rgba(122, 122, 122, 1); */
+  box-shadow: 1px 0px 7px rgba(0, 0, 0, 0.5);
+}
+
 .nav-open {
   margin-top: 262px;
 }
