--- a/src/styles/view.css
+++ b/src/styles/view.css
@@ -95,3 +95,18 @@
   background-color: #343a40;
   color: #fff;
 }
+
+@media print {
+  .view-container {
+    background-color: white;
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    margin: 0;
+    padding: 15px;
+    font-size: 14px;
+    line-height: 18px;
+  }
+}
